--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "axios-hooks": "^3.1.3",
+    "bootstrap": "5.2.0-beta1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.53.0"
   }
 }
